# SFML_TETRIS

./: .gitignore  README.md  SFML_TETRIS.sln
SFML_TETRIS/: CMakeLists.txt  Checkpoint.cpp  Checkpoint.h  GameFieldManager.cpp  GameFieldManager.h  Generator.cpp  Generator.h  Point.h  SFML_TETRIS.cpp  SFML_TETRIS.vcxproj  SFML_TETRIS.vcxproj.filters  Tetromino.cpp  Tetromino.h  connector.cpp  connector.h
SFML_TETRIS/Client/: Client.cpp
SFML_TETRIS/Server/: Server.cpp
